[workspace]
resolver = "2"
members = [
    "crates/nobro_sal",
    "crates/nobro_hal",
    "crates/nobro_kernel",
    "crates/nobro_host",
    "adapters/robo-servo",
    "adapters/sensor-stub",
    "adapters/mpu9250-imu",
    "adapters/embedded-hal-i2c",
    "adapters/embedded-hal-spi",
    "adapters/motion-ai",
    "adapters/nn-motion-ai",
    "adapters/radio-comms",
    "adapters/ros-imu-bridge",
    "apps/mvk_ppi_timestamp",
    "apps/resource_sched_demo",
    "apps/sal_adapter_demo",
    "apps/imu_i2c_demo",
    "apps/usb_cdc_demo",
    "apps/eh_imu_demo",
    "apps/c_abi_module",
    "apps/c_abi_demo",
    "apps/ai_imu_demo",
    "apps/ros_imu_demo",
    "apps/ai_usb_demo",
    "apps/recovery_demo",
    "apps/kernel_selftest",
    "apps/closed_loop_demo",
    "apps/spi_imu_demo",
    "apps/radio_link_demo",
    "apps/nn_inference_demo",
    "apps/radio_comms_demo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["dunknowcoding (YouTube NiusRobotLab)"]

[profile.release]
debug = 2
lto = true
opt-level = "s"
codegen-units = 1

[profile.dev]
opt-level = 1
