[workspace]
resolver = "2"
members = [
    "crates/nobro_net",
    "crates/nobro_database",
    "crates/nobro_nn",
    "crates/nobro_ai",
    "crates/nobro_iot",
    "crates/nobro_crypto",
    "crates/nobro_ml",
    "crates/nobro_control",
    "crates/nobro_conformance",
    "crates/nobro_secure",
    "crates/nobro_device",
    "crates/nobro_classic",
    "crates/nobro_tierc",
    "crates/nobro_usb",
    "crates/nobro_storage",
    "crates/nobro_power",
    "crates/nobro_sensor",
    "crates/nobro_sal",
    "crates/nobro_hal",
    "crates/nobro_kernel",
    "crates/nobro_host",
    "adapters/robo-servo",
    "adapters/sensor-stub",
    "adapters/mpu9250-imu",
    "adapters/embedded-hal-i2c",
    "adapters/embedded-hal-spi",
    "adapters/motion-ai",
    "adapters/nn-motion-ai",
    "adapters/radio-comms",
    "adapters/ina3221",
    "adapters/bmp280",
    "adapters/icm45686",
    "adapters/ros-imu-bridge",
    "apps/mvk_ppi_timestamp",
    "apps/resource_sched_demo",
    "apps/sal_adapter_demo",
    "apps/imu_i2c_demo",
    "apps/usb_cdc_demo",
    "apps/eh_imu_demo",
    "apps/c_abi_module",
    "apps/c_abi_demo",
    "apps/ai_imu_demo",
    "apps/ros_imu_demo",
    "apps/ai_usb_demo",
    "apps/recovery_demo",
    "apps/kernel_selftest",
    "apps/closed_loop_demo",
    "apps/spi_imu_demo",
    "apps/radio_link_demo",
    "apps/nn_inference_demo",
    "apps/radio_comms_demo",
    "apps/ai_runtime_demo",
    "apps/flash_log_demo",
    "apps/telemetry_ring_demo",
    "apps/hil_fault_demo",
    "apps/usb_stack_demo",
    "apps/watchdog_demo",
    "apps/motion3_demo",
    "apps/control_loop_demo",
    "apps/rtc_sleep_demo",
    "apps/stack_guard_demo",
    "apps/pwm_bank_demo",
    "apps/config_actuator_demo",
    "apps/gesture_demo",
    "apps/supervision_demo",
    "apps/mpu_guard_demo",
    "apps/crash_dump_demo",
    "apps/kv_store_demo",
    "apps/lease_demo",
    "apps/ble_adv_demo",
    "apps/db_persist_demo",
    "apps/cc2530_link",
    "apps/cc2530_gateway",
    "apps/tri_radio",
    "apps/udi_imu_demo",
    "apps/async_exec_demo",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["dunknowcoding (YouTube NiusRobotLab)"]

[profile.release]
debug = 2
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
panic = "abort"
