[workspace]
resolver = "2"
members = [
    "crates/nobro_admission",
    "crates/nobro_net",
    "crates/nobro_database",
    "crates/nobro_nn",
    "crates/nobro_ai",
    "crates/nobro_wireless",
    "crates/nobro_camera",
    "crates/nobro_imu",
    "crates/nobro_crypto",
    "crates/nobro_ml",
    "crates/nobro_control",
    "crates/nobro_secure",
    "crates/nobro_device",
    "crates/nobro_classic",
    "crates/nobro_tierc",
    "crates/nobro_usb",
    "crates/nobro_storage",
    "crates/nobro_power",
    "crates/nobro_sensor",
    "crates/nobro_sal",
    "crates/nobro_hal",
    "crates/nobro_kernel",
    "crates/nobro_host",
    "adapters/actuator/robo-servo",
    "adapters/virtual/sensor-stub",
    "adapters/imu/mpu9250-imu",
    "adapters/bus/embedded-hal-i2c",
    "adapters/bus/embedded-hal-spi",
    "adapters/ai/motion-ai",
    "adapters/ai/nn-motion-ai",
    "adapters/wireless/radio-comms",
    "adapters/power/ina3221",
    "adapters/environment/bmp280",
    "adapters/imu/icm45686",
    "adapters/protocol/ros-imu-bridge",
    "apps/kernel/mvk_ppi_timestamp",
    "apps/imu/imu_i2c_demo",
    "apps/connectivity/usb_cdc_demo",
    "apps/imu/eh_imu_demo",
    "apps/interop/c_abi_module",
    "apps/interop/c_abi_demo",
    "apps/ai/ai_imu_demo",
    "apps/imu/ros_imu_demo",
    "apps/ai/ai_usb_demo",
    "apps/kernel/recovery_demo",
    "apps/control/closed_loop_demo",
    "apps/imu/spi_imu_demo",
    "apps/connectivity/radio_link_demo",
    "apps/ai/nn_inference_demo",
    "apps/connectivity/radio_comms_demo",
    "apps/ai/ai_runtime_demo",
    "apps/storage/flash_log_demo",
    "apps/storage/telemetry_ring_demo",
    "apps/connectivity/usb_stack_demo",
    "apps/kernel/watchdog_demo",
    "apps/ai/motion3_demo",
    "apps/control/control_loop_demo",
    "apps/kernel/rtc_sleep_demo",
    "apps/kernel/stack_guard_demo",
    "apps/control/pwm_bank_demo",
    "apps/control/config_actuator_demo",
    "apps/ai/gesture_demo",
    "apps/kernel/supervision_demo",
    "apps/imu/mpu_guard_demo",
    "apps/kernel/crash_dump_demo",
    "apps/storage/kv_store_demo",
    "apps/kernel/lease_demo",
    "apps/connectivity/ble_adv_demo",
    "apps/storage/db_persist_demo",
    "apps/connectivity/cc2530_link",
    "apps/connectivity/cc2530_gateway",
    "apps/connectivity/tri_radio",
    "apps/imu/udi_imu_demo",
    "apps/kernel/async_exec_demo",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
authors = ["dunknowcoding (YouTube NiusRobotLab)"]

[profile.release]
debug = 2
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
panic = "abort"
