[package]
name = "nobro-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
critical-section = { version = "1.2", features = ["std"] }
nobro-database = { path = "../crates/nobro_database" }
nobro-kernel = { path = "../crates/nobro_kernel" }
nobro-net = { path = "../crates/nobro_net" }
nobro-secure = { path = "../crates/nobro_secure" }

[[bin]]
name = "wire_inputs"
path = "fuzz_targets/wire_inputs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "database_images"
path = "fuzz_targets/database_images.rs"
test = false
doc = false
bench = false

[[bin]]
name = "control_state"
path = "fuzz_targets/control_state.rs"
test = false
doc = false
bench = false

[[bin]]
name = "abi_lengths"
path = "fuzz_targets/abi_lengths.rs"
test = false
doc = false
bench = false

[[bin]]
name = "async_reactor"
path = "fuzz_targets/async_reactor.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
