[package]
name = "airon-adapter-mpu9250-imu"
version.workspace = true
edition.workspace = true
description = "MPU9250/GY-9250/GY-91 SensorSal adapter (real TWIM I2C)"

[dependencies]
airon-hal = { path = "../../crates/airon-hal", default-features = false }
airon-kernel = { path = "../../crates/airon-kernel" }
airon-sal = { path = "../../crates/airon-sal" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
libm = "0.2"

[features]
default = ["board-promicro-nosd"]
board-promicro-nosd = ["airon-hal/board-promicro-nosd"]
board-nicenano-s140 = ["airon-hal/board-nicenano-s140"]
