[package]
name = "airon-adapter-robo-servo"
version.workspace = true
edition.workspace = true
description = "RoboServo ActuatorSal adapter for AIRON (nRF52840 PWM backend)"

[dependencies]
airon-hal = { path = "../../crates/airon-hal" }
airon-sal = { path = "../../crates/airon-sal" }

[features]
default = ["board-promicro-nosd"]
board-promicro-nosd = ["airon-hal/board-promicro-nosd"]
