[package]
name = "resource-sched-demo"
version.workspace = true
edition.workspace = true

[[bin]]
name = "resource_sched_demo"
path = "src/main.rs"

[dependencies]
airon-hal = { path = "../../crates/airon-hal" }
airon-kernel = { path = "../../crates/airon-kernel" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
nrf52840-pac = { version = "0.12", features = ["rt"] }

[features]
default = ["board-promicro-nosd"]
board-promicro-nosd = ["airon-hal/board-promicro-nosd"]
