[package]
name = "sal-adapter-demo"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sal_adapter_demo"
path = "src/main.rs"

[dependencies]
airon-adapter-robo-servo = { path = "../../adapters/robo-servo" }
airon-adapter-sensor-stub = { path = "../../adapters/sensor-stub" }
airon-hal = { path = "../../crates/airon-hal" }
airon-kernel = { path = "../../crates/airon-kernel" }
airon-sal = { path = "../../crates/airon-sal" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[features]
default = ["board-promicro-nosd"]
board-promicro-nosd = [
    "airon-hal/board-promicro-nosd",
    "airon-adapter-robo-servo/board-promicro-nosd",
    "airon-adapter-sensor-stub/board-promicro-nosd",
]
