[package]
name = "nobro-eh-i2c"
version.workspace = true
edition.workspace = true

# embedded-hal 1.0 I2C adapter over the NobroRTOS TWIM bus. Lets the large universe
# of unmodified `embedded-hal` device drivers run under NobroRTOS - a thin, bounded,
# no-heap adapter. The kernel is not involved.

[dependencies]
nobro-hal = { path = "../../crates/nobro_hal", default-features = false }
embedded-hal = "1.0"

[features]
default = ["board-promicro-nosd"]
board-promicro-nosd = ["nobro-hal/board-promicro-nosd"]
board-nicenano-s140 = ["nobro-hal/board-nicenano-s140"]
