[package]
name = "nobro-eh-spi"
version.workspace = true
edition.workspace = true

# embedded-hal 1.0 SpiDevice adapter over the NobroRTOS SPIM0 bus. Lets unmodified
# `embedded-hal` SPI device drivers run under NobroRTOS - a thin, bounded, no-heap
# adapter with software chip-select. The kernel is not involved.

[dependencies]
nobro-hal = { path = "../../crates/nobro_hal", default-features = false }
embedded-hal = "1.0"
cortex-m = "0.7"

[features]
default = ["board-promicro-nosd"]
board-promicro-nosd = ["nobro-hal/board-promicro-nosd"]
board-nicenano-s140 = ["nobro-hal/board-nicenano-s140"]
