[package]
name = "nobro-adapter-icm45686"
version.workspace = true
edition.workspace = true
# ICM-45686 (TDK) 6-axis IMU: full-scale-aware raw->physical decode, generic over
# embedded-hal I2C. Complements the Nano ICM45686 sketch interop the collector already
# ingests. Decode is host-tested; the register map should be confirmed against the
# datasheet before on-hardware register access.
[dependencies]
embedded-hal = "1.0"
