[package]
name = "async-exec-demo"
version.workspace = true
edition.workspace = true

# Proves nobro_kernel::async_exec::BoundedExecutor on real hardware: spawns bounded
# cooperative async tasks, completes them within a round budget, rejects past-capacity
# spawns, and enforces stall detection. Pure kernel logic - no HAL, no sensors.
[[bin]]
name = "async_exec_demo"
path = "src/main.rs"

[dependencies]
nobro-kernel = { path = "../../crates/nobro_kernel" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-halt = "0.2"
