[package]
name = "cc2530-gateway"
version.workspace = true
edition.workspace = true

# NiusZigbee gateway (M122): capture + classify 802.15.4 frames for the host contract.
# using the NiusZigbee SDCC transceiver firmware protocol (FE LEN CMD DATA FCS @115200).
# PING/PONG proves the link + reads the firmware version; promiscuous RX then counts
# real 802.15.4 frames off the air. Evidence in NOBRO_CC2530_REPORT (J-Link mem32).
[[bin]]
name = "cc2530_gateway"
path = "src/main.rs"
required-features = ["board-promicro-nosd"]

[dependencies]
nobro-hal = { path = "../../crates/nobro_hal", default-features = false }
nobro-iot = { path = "../../crates/nobro_iot" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-halt = "0.2"

[features]
default = ["board-promicro-nosd"]
board-promicro-nosd = ["nobro-hal/board-promicro-nosd"]
board-nicenano-s140 = ["nobro-hal/board-nicenano-s140"]
