[package]
name = "closed-loop-demo"
version.workspace = true
edition.workspace = true

# Robot pillar, closed loop on hardware: read the IMU, map accel to a 50 Hz servo
# pulse, drive it through the RoboServo ActuatorSal, and read the PWM back to confirm
# the actuator faithfully reproduced the sensor-derived command. Records steps +
# readback matches in NOBRO_CLOSEDLOOP_REPORT. Sensor -> compute -> actuator -> verify.
[[bin]]
name = "closed_loop_demo"
path = "src/main.rs"
required-features = ["board-promicro-nosd"]

[dependencies]
nobro-adapter-robo-servo = { path = "../../adapters/robo-servo", default-features = false }
nobro-adapter-mpu9250-imu = { path = "../../adapters/mpu9250-imu", default-features = false }
nobro-hal = { path = "../../crates/nobro_hal", default-features = false }
nobro-kernel = { path = "../../crates/nobro_kernel" }
nobro-sal = { path = "../../crates/nobro_sal" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-halt = "0.2"

[features]
default = ["board-promicro-nosd"]
board-promicro-nosd = [
    "nobro-hal/board-promicro-nosd",
    "nobro-adapter-mpu9250-imu/board-promicro-nosd",
    "nobro-adapter-robo-servo/board-promicro-nosd",
]
board-nicenano-s140 = [
    "nobro-hal/board-nicenano-s140",
    "nobro-adapter-mpu9250-imu/board-nicenano-s140",
    "nobro-adapter-robo-servo/board-nicenano-s140",
]
