[package]
name = "control-loop-demo"
version.workspace = true
edition.workspace = true

# Control primitives on real hardware (M148/M149): live SPI IMU tilt -> complementary
# filter (accel angle + gyro rate) -> PID -> servo pulse command. Verifies the filter
# settles to a plausible bench tilt and the PID holds the pulse near center for a
# stationary board. Self-certifies via NOBRO_CONTROL_REPORT (J-Link mem32).
[[bin]]
name = "control_loop_demo"
path = "src/main.rs"
required-features = ["board-promicro-nosd"]

[dependencies]
nobro-hal = { path = "../../crates/nobro_hal", default-features = false }
nobro-eh-spi = { path = "../../adapters/embedded-hal-spi", default-features = false }
nobro-control = { path = "../../crates/nobro_control" }
embedded-hal = "1.0"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-halt = "0.2"

[features]
default = ["board-promicro-nosd"]
board-promicro-nosd = ["nobro-hal/board-promicro-nosd", "nobro-eh-spi/board-promicro-nosd"]
