[package]
name = "crash-dump-demo"
version.workspace = true
edition.workspace = true

# Crash-dump capture to flash (M184): first boot deliberately hard-faults; the handler
# writes a crash record (stacked PC/LR/xPSR + CFSR/HFSR) to a flash page via NVMC and
# reboots; the second boot validates the persisted dump. NOBRO_CRASH_REPORT (mem32).
[[bin]]
name = "crash_dump_demo"
path = "src/main.rs"
required-features = ["board-promicro-nosd"]

[dependencies]
nobro-hal = { path = "../../crates/nobro_hal", default-features = false }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-halt = "0.2"

[features]
default = ["board-promicro-nosd"]
board-promicro-nosd = ["nobro-hal/board-promicro-nosd"]
board-nicenano-s140 = ["nobro-hal/board-nicenano-s140"]
