[package]
name = "db-persist-demo"
version.workspace = true
edition.workspace = true

# nobro-database persistence on real flash (M217): a typed Table is recovered from an
# NVMC flash page at boot, mutated (boot counter + one row per boot), and written back
# as a checksummed image. Across a reset the table comes back intact - recovered=1 and
# boot_count climbing in NOBRO_DB_PERSIST_REPORT is the hardware evidence.
[[bin]]
name = "db_persist"
path = "src/main.rs"
required-features = ["board-promicro-nosd"]

[dependencies]
nobro-hal = { path = "../../crates/nobro_hal", default-features = false }
nobro-database = { path = "../../crates/nobro_database" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-halt = "0.2"

[features]
default = ["board-promicro-nosd"]
board-promicro-nosd = ["nobro-hal/board-promicro-nosd"]
board-nicenano-s140 = ["nobro-hal/board-nicenano-s140"]
