[package]
name = "hil-fault-demo"
version.workspace = true
edition.workspace = true

# Hardware-in-the-loop fault-injection campaign (M169): kernel FaultInjector -> real
# RecoveryCoordinator, asserting the escalation state machine.
[[bin]]
name = "hil_fault_demo"
path = "src/main.rs"
required-features = ["board-promicro-nosd"]

[dependencies]
nobro-hal = { path = "../../crates/nobro_hal", default-features = false }
nobro-kernel = { path = "../../crates/nobro_kernel" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-halt = "0.2"

[features]
default = ["board-promicro-nosd"]
board-promicro-nosd = ["nobro-hal/board-promicro-nosd"]
board-nicenano-s140 = ["nobro-hal/board-nicenano-s140"]
