[package]
name = "imu-i2c-demo"
version.workspace = true
edition.workspace = true

# One binary per bootloader layout avoids sharing one ELF between 0x1000 and 0x26000 links.
[[bin]]
name = "imu_i2c_demo"
path = "src/main.rs"
required-features = ["board-promicro-nosd"]

[[bin]]
name = "imu_i2c_demo_board5"
path = "src/main_board5.rs"
required-features = ["board-nicenano-s140"]

[dependencies]
airon-adapter-mpu9250-imu = { path = "../../adapters/mpu9250-imu", default-features = false }
airon-hal = { path = "../../crates/nobro_hal", default-features = false }
airon-kernel = { path = "../../crates/nobro_kernel" }
airon-sal = { path = "../../crates/nobro_sal" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[features]
default = ["board-promicro-nosd"]
board-promicro-nosd = [
    "airon-hal/board-promicro-nosd",
    "airon-adapter-mpu9250-imu/board-promicro-nosd",
]
board-nicenano-s140 = [
    "airon-hal/board-nicenano-s140",
    "airon-adapter-mpu9250-imu/board-nicenano-s140",
]
