[package]
name = "kernel-selftest"
version.workspace = true
edition.workspace = true

# Runs the kernel control-plane subsystems (quota ledger, event log, mailbox IPC,
# key-value store, alarm queue) ON THE MCU and records a per-subsystem pass bit in
# NOBRO_SELFTEST_REPORT. These are host-tested in CI; this proves they run identically
# on real hardware. Pure kernel logic - no HAL, no sensors.
[[bin]]
name = "kernel_selftest"
path = "src/main.rs"

[dependencies]
nobro-kernel = { path = "../../crates/nobro_kernel" }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-halt = "0.2"
